feat(compose). updated periods of health check for faster startup feat(auth): updated requirements for auth, fixed introspect bug, generic: updated .env files to include SERVICE_TYPE as environment variable feat(JWT): now auth has endpoint /auth/internal/token/invalidate to invalidate a token, is a delete that accepts a uuid parameter. JWT invalidation has been applied for these endpoints: delete_profile, ban_profile, edit_profile, admin edit profile. chores: Updated specs Possible bug: in admin/profile/{uuid}/edit, if I pass a uuid as query I get an error
